--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   cloud_firestore: ^3.1.7
   permission_handler: ^8.3.0
   google_sign_in: ^5.2.3
+  equatable: ^2.0.3
 
   cupertino_icons: ^1.0.2
 
