--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   google_sign_in: ^5.2.3
   equatable: ^2.0.3
   email_validator: ^2.0.1
+  font_awesome_flutter: ^9.2.0
 
   cupertino_icons: ^1.0.2
 
